--- a/templates/home/carousel.html
+++ b/templates/home/carousel.html
@@ -4,75 +4,39 @@
     <div class="col-sm-12">
         <div class="row">
             <div class="col-sm-12">
-
+        {% if home1 %}
                 <!--Carousel Wrapper-->
                 <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
                     <!--Indicators-->
                     <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-2" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                    {% for item in home1 %}
+                        <li data-target="#carousel-example-2" data-slide-to="{{ forloop.count }}" class="{% if forloop.first %}active{% endif %}"></li>
+                        <!-- <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-2" data-slide-to="2"></li> -->
+                    {% endfor %}
                     </ol>
                     <!--/.Indicators-->
 
                     <!--Slides-->
                     <div class="carousel-inner" role="listbox">
-                        <!--First slide-->
-                        <div class="carousel-item active">
+                        {% for item in home1 %}
+                        <div class="carousel-item{% if forloop.first %} active {% endif %}">
                             <!--Mask color-->
                             <div class="view hm-black-slight">
-                                <img src="https://mdbootstrap.com/images/slides/slide%20(28).jpg" class="img-fluid" alt="">
+                                <img src="{{ item.image.url }}" class="img-fluid img-responsive"  alt="">
                                 <div class="full-bg-img">
                                 </div>
                             </div>
                             <!--Caption-->
                             <div class="carousel-caption">
                                 <div class="animated fadeInDown">
-                                    <h4 class="h4-responsive">American Football</h4>
-                                    <p>Monday's match between Chicago Bears and Houston Texans</p>
+                                    <h4 class="h4-responsive">{{ item.title }}</h4>
+                                    <p>{{ item.description }}</p>
                                 </div>
                             </div>
                             <!--Caption-->
                         </div>
-                        <!--/First slide-->
-
-                        <!--Second slide-->
-                        <div class="carousel-item">
-                            <!--Mask color-->
-                            <div class="view hm-black-strong">
-                                <img src="https://mdbootstrap.com/images/slides/slide%20(29).jpg" class="img-fluid" alt="">
-                                <div class="full-bg-img">
-                                </div>
-                            </div>
-                            <!--Caption-->
-                            <div class="carousel-caption">
-                                <div class="animated fadeInDown">
-                                    <h4 class="h4-responsive">Fashion & Lfestyle</h4>
-                                    <p>Check out the most fashionable models of jeans this summer</p>
-                                </div>
-                            </div>
-                            <!--Caption-->
-                        </div>
-                        <!--/Second slide-->
-
-                        <!--Third slide-->
-                        <div class="carousel-item">
-                            <!--Mask color-->
-                            <div class="view hm-black-light">
-                                <img src="https://mdbootstrap.com/images/slides/slide%20(30).jpg" class="img-fluid" alt="">
-                                <div class="full-bg-img">
-                                </div>
-                            </div>
-                            <!--Caption-->
-                            <div class="carousel-caption">
-                                <div class="animated fadeInDown">
-                                    <h3 class="h4-responsive">Parenting</h4>
-                                    <p>Top 5 ideas for spending Mother's Day with your kids</p>
-                                </div>
-                            </div>
-                            <!--Caption-->
-                        </div>
-                        <!--/Third slide-->
+                        {% endfor %}
                     </div>
                     <!--/.Slides-->
 
@@ -88,6 +52,7 @@
                     <!--/.Controls-->
                 </div>
                 <!--/.Carousel Wrapper-->
+        {% endif %}
 
             </div>
         </div>
