--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}SEA{% endblock %}</title>
+    <title>{% block title %}SEF | Sustainable Energy Forum{% endblock %}</title>
+
+
+    <link rel="icon" sizes="96x96" href="{% static 'img/logo/logo3.png' %}">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
