--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,11 @@
+{% load static %}
 <nav class="navbar fixed-top navbar-toggleable-md navbar-dark scrolling-navbar">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <h2>S.E.A</h2>
-            <!-- <img src="https://mdbootstrap.com/img/logo/mdb-transparent-sm-shadows.png" class="d-inline-block align-top" alt="MDBootstrap"> -->
+            <h4><img src="{% static 'img/logo/logo3.png' %}" class="d-inline-block align-top" alt="S.E.F" width="25" height="25"> Sustainable Energy Forum</h4> 
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav smooth-scroll mr-auto">
