--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container">
     <div class="divider-new">
-        <h2 class="h2-responsive">Why join SEA?</h2>
+        <h2 class="h2-responsive">Why join S.E.F?</h2>
     </div>
 
     <section class="container marketing">
