--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,30 +5,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <h4><img src="{% static 'img/logo/logo3.png' %}" class="d-inline-block align-top" alt="S.E.F" width="25" height="25"> Sustainable Energy Forum</h4> 
+            <h5 class="h5-responsive"><img src="{% static 'img/logo/logo3.png' %}" class="d-inline-block align-top" alt="S.E.F" width="25" height="25"> Sustainable Energy Forum</h5> 
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav smooth-scroll mr-auto">
                 <!-- <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#home"><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#best-features"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#examples-of-use"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#testimonials"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#pricing"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#our-team"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="#contact"></a>
                 </li> -->
             </ul>
             <ul class="navbar-nav nav-flex-icons">
