--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,10 +2,10 @@
 <div class="container-fluid">
 	<hr>
 	<div class="footer-copyright" style="padding-bottom:40px;">
-	    <div class="container-fluid">
+	    <div class="container">
 			<div class="row">
 				<div class="col-sm-4">
-	    		    <span class="justity-content-start">© 2017 Copyright: <a href=""> Sustainable Energy for All</a> | Created by: ibrokola</span>  
+	    		    <span class="justity-content-start">© 2017 Copyright: <a href=""> Sustainable Energy for All</a> . Created by: ibrokola</span>  
 				</div>
 				<div class="col-sm-4">
 				    <span class="justify-content-center">powered by <img src="{% static 'img/logo/logo4.png' %}" alt="" width="120" height="40"></span>
