--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -15,7 +15,7 @@
     {% if home2 %}
     	<div class="row text-center">
             {% for item in home2 %}
-    		<div class="col-lg-4 col-md-6 mb-r wow fadeInLeft" data-wow-delay="0.2s">
+    		<div class="col-lg-4 col-sm-4 mb-r wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="avatar">
                 {% if item.image %}
                     <img src="{{ item.image.url }}" class="rounded-circle" width="200" height="200">
