--- a/static/css/main.css
+++ b/static/css/main.css
@@ -100,11 +100,11 @@ h1 {
 
 .upvote[data-state="voted"] {
     border-top: 0px;
-    border-bottom: 15px solid #ff5722;
+    border-bottom: 15px solid #0086B3;
 }
 
 .downvote[data-state="voted"] {
-    border-top: 15px solid #ff5722;
+    border-top: 15px solid #0086B3;
     border-bottom: 0px;
 }
 
