--- a/templates/users/profile_view.html
+++ b/templates/users/profile_view.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="card-block">
 						<a href="{{ item.get_absolute_url }}">
-							<h4 class="card-title" style="color: black;">{{ item }}</h4>
+							<h4 class="card-title h4-responsive" style="color: black;">{{ item }}</h4>
 						</a>
 						<!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
 						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -108,7 +108,46 @@
 			{% else %}
 				<p>No post yet</p>
 			{% endif %}
+			<br>
+			<br>
 			</div>
+				<nav>
+				{% if post.has_other_pages %}
+					<ul class="pagination justify-content-center pg-darkgrey">
+						{% if post.has_previous %}
+						<li class="page-item">
+							<a href="?page={{ post.previous_page_number }}" aria-label="Previous">
+								<span aria-hidden="true">&laquo;</span>
+								<span class="sr-only">Previous</span>
+							</a>
+						</li>
+						{% else %}
+						<li class="disabled"><span>&laquo;</span></li>
+						{% endif %}
+						{% for i in post.paginator.page_range %}
+						{% if post.number == i %}
+							<li class="page-item active">
+								<span class="page-link" style="margin-right:5px;"> {{ i }} <span class="sr-only">(current)</span></span>
+							</li>
+						{% else %}
+							<li class="page-item">
+								<li><a href="?page={{ i }}">{{ i }}</a></li>
+							</li>
+						{% endif %}
+						{% endfor %}
+						{% if post.has_next %}
+						<li class="page-item">
+							<a href="?page={{ post.next_page_number }}" aria-label="Next">
+								<span aria-hidden="true">&raquo;</span>
+								<span class="sr-only">Next</span>
+							</a>
+						</li>
+						{% else %}
+						<li class="disabled"><span>&raquo;</span></li>
+						{% endif %}
+					</ul>
+				{% endif %}
+				</nav>
 		</div>
 		<hr>
 		<br>
