--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}SEF | Sustainable Energy Forum{% endblock %}</title>
+    <title>{% block title %}SEF: Sustainable Energy Forum{% endblock %}</title>
 
 
     <link rel="icon" sizes="96x96" href="{% static 'img/logo/logo3.png' %}">
