--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -5,6 +5,9 @@
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
 {% block content %}
+
+<div class="col-sm-6 offset-sm-3" style="padding-top: 150px;">
+
 <h1>{% trans "Account Connections" %}</h1>
 
 {% if form.accounts %}
