--- a/templates/users/profile_user.html
+++ b/templates/users/profile_user.html
@@ -41,7 +41,7 @@
 						<hr>
 						<p>Rank: {{ profile.rank }}</p>
 						<hr>
-						<p>Points: {{ profile.user.rank }}</p>
+						<p>Points: {{ request.user.score }}</p>
 						<hr>
 						 <p>Email: {{ profile.user.email }}</p> 
 						<hr>
