--- a/live-static/static-root/css/main.css
+++ b/live-static/static-root/css/main.css
@@ -1,11 +1,11 @@
-/*.logo {
-    color: #ff5722;
+.logo {
+    color: #fff;
     font-size: 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-}*/
+}
 
 .post {
     display: -webkit-box;
@@ -100,11 +100,11 @@ h1 {
 
 .upvote[data-state="voted"] {
     border-top: 0px;
-    border-bottom: 15px solid #ff5722;
+    border-bottom: 15px solid #0086B3;
 }
 
 .downvote[data-state="voted"] {
-    border-top: 15px solid #ff5722;
+    border-top: 15px solid #0086B3;
     border-bottom: 0px;
 }
 
@@ -157,7 +157,7 @@ h1 {
     background-color: #afeeee;
     border: 1px solid #87CEEB;
     border-radius: 4px;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    /* box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05); */
     padding-left: 8px;
     padding-right: 8px;
 }
