--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -26,16 +26,17 @@
                 of your existing social media accounts. Or, <a href="{{ signup_url }}">sign up</a>
                 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-                <div class="socialaccount_ballot">
+                <div class="socialaccount_ballot text-center">
 
                   <ul class="socialaccount_providers">
                     {# include "socialaccount/snippets/provider_list.html" with process="login" #}
                   </ul>
                   {% load socialaccount %}
-                  <a href="{# provider_login_url 'facebook' method='oauth2' #}" class='btn-floating btn-small btn-fb'><i class="fa fa-facebook"></i></a>
-                  <a href="{# provider_login_url 'twitter' #}" class='btn-floating btn-small btn-tw'><i class="fa fa-twitter"></i></a>
+                  <a href="{% provider_login_url 'facebook' method='oauth2' %}" class='btn-floating btn-small btn-fb'><i class="fa fa-facebook"></i></a>
+                  <a href="{% provider_login_url 'twitter' %}" class='btn-floating btn-small btn-tw'><i class="fa fa-twitter"></i></a>
+                  <a href="{% provider_login_url 'google' %}" class='btn-floating btn-small btn-gg'><i class="fa fa-google"></i></a>
 
-                  <div class="login-or">{% trans 'or' %}</div>
+                  <div class="login-or text-center">{% trans 'or' %}</div>
 
                 </div>
 
