--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}SEF: Sustainable Energy Forum{% endblock %}</title>
+    
+    <!-- Meta OG -->
+    <meta property="og:title" content="Sustainable Energy Forum">
+    <meta property="og:description" content="Share, debate and interact with like minded clean energy enthusiast and professionals">
+    <meta property="og:image" content="{% static 'img/logo/logo2.png' %}">
+    <meta property="og:url" content="http://www.sustenergy.ca/">
+    <meta property="og:site_name" content="Sustainable Energy Forum">
+    <!-- /Meta OG -->
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="Sustainable Energy Forum">
+    <meta name="twitter:description" content="Share, debate and interact with like minded clean energy enthusiast and professionals">
+    <meta name="twitter:title" content="Sustainable Energy Forum">
+    <meta name="twitter:site" content="http://www.sustenergy.ca/">
+    <meta name="twitter:image" content="{% static 'img/logo/logo2.png' %}">
+    <meta name="twitter:creator" content="@ibroCEO">    
+
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/../manifest.json">
 
     <link rel="icon" sizes="96x96" href="{% static 'img/logo/logo3.png' %}">
 
@@ -78,17 +108,17 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="{% static 'js/mdb.js' %}"></script>
 
-    <script type="text/javascript" src="{# static 'js/main.js' #}"></script>
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
     {% if request.user.is_authenticated %}
-    <script src="{# static 'pushnot.js' #}"></script>
+    <script src="{% static 'pushnote.js' %}"></script>
     {% endif %} {% block before-body-close %} {% endblock %}
-    <script>
+    <!-- <script>
         // SideNav init
         $(".button-collapse").sideNav();
         var el = document.querySelector('.custom-scrollbar');
         Ps.initialize(el);
-    </script>
+    </script> -->
 
     <script>
         new WOW().init();
