--- a/templates/home/home_member.html
+++ b/templates/home/home_member.html
@@ -39,7 +39,7 @@
                             <hr>
                             <p>Rank: {{ item.rank }}</p>
                             <hr>
-                            <p>Points: {{ profile.user.rank }}</p>
+                            <p>Points: {{ request.user.score }}</p>
                             <hr>
                             <p>Email: {{ item.user.email }}</p>
                             <hr>
