--- a/templates/socialaccount/login_cancelled.html
+++ b/templates/socialaccount/login_cancelled.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+<div class="col-sm-6 offset-sm-3" style="padding-top: 150px;">
+
 <h1>{% trans "Login Cancelled" %}</h1>
 
 {% url 'account_login' as login_url %}
