--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/../manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
 
     <link rel="icon" sizes="96x96" href="{% static 'img/logo/logo3.png' %}">
 
