profile app created seperately

--- a/templates/forum/discussion.html
+++ b/templates/forum/discussion.html
@@ -15,7 +15,7 @@
                 <hr>
                 <div class="post-line-2">
                     <div class="post-score"> {# url 'forum:discussion' post.id post_slug #} <!-- {{ author.profile.get_absolute_url }} -->
-                        by <a href="{% url 'users:profile_view' post.author.username %}">{{ post.author.username }}</a> . {{ post.score }} point{{ post.score | pluralize }} . <a><i class="fa fa-comments-o"></i> {{ comments|length }}</a> . <i class="fa fa-clock-o"></i>
+                        by <a href="{% url 'profile:profile_view' post.author.username %}">{{ post.author.username }}</a> . {{ post.score }} point{{ post.score | pluralize }} . <a><i class="fa fa-comments-o"></i> {{ comments|length }}</a> . <i class="fa fa-clock-o"></i>
                         {{ post.submission_time | naturaltime }} 
                             {% if request.user.is_staff %} . <a href="{% url 'admin:forum_post_change' post.id %}">admin</a>
                         {% endif %}
@@ -46,7 +46,7 @@
                         <div class="">
                             <div class="comment-header">
                                 <span class="comment-author">
-            						by <a href="{% url 'users:profile_view' comment.author.username %}">{{ comment.author.username }}</a>
+            						by <a href="{% url 'profile:profile_view' comment.author.username %}">{{ comment.author.username }}</a>
             					</span>
                                 <span> . </span>
                                 <span>{{comment.score}} points</span>
