--- a/templates/home/home_member.html
+++ b/templates/home/home_member.html
@@ -49,7 +49,7 @@
                             <!-- <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a> -->
                             <!--Pinterest-->
                             <!-- <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a> -->
-                            <p>click <a href="{% url 'users:profile_user' %}"><button class="btn btn-default btn-sm">Here</button></a> to update profile info</p>
+                            <p>click <a href="{% url 'profile:profile_user' %}"><button class="btn btn-default btn-sm">Here</button></a> to update profile info</p>
                         </div>
                     {% endfor %}
                     <!--/Card-->
