--- a/templates/profiles/profile_user.html
+++ b/templates/profiles/profile_user.html
@@ -64,7 +64,7 @@
 					<!-- </div> -->
 						 <hr>
 						<div class="text-center">
-							<h5>Edit profile details</h5><a href="{% url 'users:profile_edit' %}"><button class="btn btn-default btn-sm" value="update" type="submit">Edit</button></a>
+							<h5>Edit profile details</h5><a href="{% url 'profile:profile_edit' %}"><button class="btn btn-default btn-sm" value="update" type="submit">Edit</button></a>
 						</div> 
 
 			    <!-- </div> -->
