--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
-                    <a class="dropdown-item" href="{% url 'users:profile_user' %}">Profile</a>
+                    <a class="dropdown-item" href="{% url 'profile:profile_user' %}">Profile</a>
                     {% endif %}
                 </div>
             </li>
