--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container-fluid" style="padding-top: 80px;">
+<div class="justify-content-center text-center" style="padding-top: 80px;">
     {% include 'home/carousel.html' with home1=home1 %}
 </div>
 <div class="container">
