--- a/templates/forum/discussion.html
+++ b/templates/forum/discussion.html
@@ -7,7 +7,7 @@
 <div class="container-fluid" style="padding-top: 100px;"></div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-md-8">
             <div class="col-sm-12">
                 <div class="">
                     <h2 class="h1-responsive"><span></span>{{ post.title }}</h2>
@@ -84,7 +84,7 @@
         <br>
         <br>
         <br>    
-        <div class="col-sm-4">
+        <div class="col-md-4">
             {% include "forum/snippet/sidebar.html" with side1=side1 side2=side2 %}
         </div>
     </div>
