--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,9 +1,5 @@
-{% extends 'base.html' %}
-{% load static %}
-
-
-{% block content %}
-<div class="justify-content-center text-center" style="padding-top: 70px;">
+{% extends 'base.html' %} {% load static %} {% block content %}
+<div class="container justify-content-center text-center" style="padding-top: 70px;">
     {% include 'home/carousel.html' with home1=home1 %}
 </div>
 <div class="container">
@@ -12,24 +8,22 @@
     </div>
 
     <section class="container marketing">
-    {% if home2 %}
-    	<div class="row text-center">
+        {% if home2 %}
+        <div class="row text-center">
             {% for item in home2 %}
-    		<div class="col-lg-4 col-md-4 mb-r wow fadeInLeft" data-wow-delay="0.2s">
+            <div class="col-lg-4 col-md-4 mb-r wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="avatar">
-                {% if item.image %}
-                    <img src="{{ item.image.url }}" class="rounded-circle" width="200" height="200">
-                {% else %}
-                    <img src="https://mdbootstrap.com/images/avatars/img%20(1).jpg" class="rounded-circle" width="140" height="140">
-                {% endif %}
+                    {% if item.image %}
+                    <img src="{{ item.image.url }}" class="rounded-circle" width="200" height="200"> {% else %}
+                    <img src="https://mdbootstrap.com/images/avatars/img%20(1).jpg" class="rounded-circle" width="140" height="140"> {% endif %}
                 </div>
                 <h4 class="h4-responsive"><b>{{ item.title }}</b></h4>
-                
+
                 <p>{{ item.reason }}</p>
             </div>
             {% endfor %}
         </div>
-    {% endif %}
+        {% endif %}
     </section>
 </div>
 
