--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div class="container justify-content-center text-center" style="padding-top: 70px;">
+<div class="container-fluid justify-content-center text-center" style="padding-top: 70px;">
     {% include 'home/carousel.html' with home1=home1 %}
 </div>
 <div class="container">
