--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <h5><img src="{% static 'img/logo/logo3.png' %}" class="d-inline-block align-top" alt="S.E.F" width="25" height="25"> Sustainable Energy Forum</h5>
+            <h5 style="font-family: 'Frijole', cursive;"><img src="{% static 'img/logo/logo3.png' %}" class="d-inline-block align-top" alt="S.E.F" width="25" height="25"> Sustainable Energy Forum</h5>
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav smooth-scroll mr-auto">
