--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,8 @@
 
     <link rel="icon" sizes="96x96" href="{% static 'img/logo/logo3.png' %}">
 
+    <link href="https://fonts.googleapis.com/css?family=Frijole" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
