--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
 	    		    <span class="justity-content-start">© 2017 Copyright: <a href=""> Sustainable Energy for All</a> . Created by: <b>ibrokola</b></span>  
 				</div>
 				<div class="col-sm-4">
-				    <span class="justify-content-center">powered by <img src="{% static 'img/logo/logo4.png' %}" alt="" width="120" height="40"></span>
+				    <!-- <span class="justify-content-center">powered by <img src="{# static 'img/logo/logo4.png' #}" alt="" width="120" height="40"></span> -->
 				</div>
 				<div class="col-sm-4">
 				    <span class="justify-content-end"><a href="">Privacy policy</a> | <a href="">Terms</a></span>
