--- a/templates/home/home_member.html
+++ b/templates/home/home_member.html
@@ -56,6 +56,10 @@
                 </section>
             </div>            
             </div>
+            <!-- <div class="text-center">
+                <a id="lazyLoadLink" href="javascript:void(0);" 
+         data-page="2"><button class="btn btn-default">Load more</button></a> 
+            </div> -->
             	<nav>
 				{% if posts.has_other_pages %}
 					<ul class="pagination justify-content-center pg-darkgrey">
