--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,13 +21,26 @@
                     <a class="nav-link" href="{% url 'account_signup' %}"><i class="fa fa-sign-in"></i> <span class="hidden-sm-down">Register</span></a>
                 </li>
                 {% endif %}
+                {% if request.user.is_authenticated %}
+                <li class="nav-item dropdown" style="padding-top: 8px;">
+                  <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      <i class="fa fa-bell" aria-hidden="true"></i>
+                    </a>
+                  <!-- <span class="caret"></span> -->
+                  <div id='notification_dropdown' class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+                    <!-- <ul class="dropdown-menu" id='notification_dropdown'>
+                    </ul> -->
+                  </div>
+                </li>
+                {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-user"></i> <span class="hidden-sm-down">My account</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
                         {% if not request.user.is_authenticated %}
-                        <a class="dropdown-item" href="{% url 'account_login' %}">Login</a> {% endif %} 
+                        <a class="dropdown-item" href="{% url 'account_login' %}">Login</a> 
+                        {% endif %} 
                         {% if request.user.is_authenticated %}
                         <a class="dropdown-item" href="{% url 'profile:profile_user' %}">Profile</a>
                         <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a> 
