--- a/templates/forum/start.html
+++ b/templates/forum/start.html
@@ -14,7 +14,7 @@
                 <h1 class="h1-responsive">New Discussion</h1>
                 <form method="post">
                     {% csrf_token %} {{ form|crispy }}
-                    <button type="submit" class="btn btn-default btn-sm">Start Discussion</button>
+                    <button type="submit" class="btn btn-default btn-sm"><i class="fa fa-paper-plane"></i> Start</button>
                 </form>
             </div>
         </div>
